@@ -123,12 +123,11 @@ setMethod("pAttribute", "textstat", function(object) object@pAttribute)
 
 #' @exportMethod [[
 #' @rdname textstat-class
-setMethod("[[", "textstat", function(x,i){
-  x@stat[[i]]
-})
+setMethod("[[", "textstat", function(x, i) x@stat[[i]] )
 
 #' @exportMethod [[
 #' @rdname textstat-class
-setMethod("[", "textstat", function(x,i){
-  x@stat[i]
+setMethod("[", "textstat", function(x, i, j, by, with = TRUE){
+  x@stat <- x@stat[i = i, j = j, by = by, with = with]
+  x
 })
